<resources>
    <string name="app_name">CertificacionM7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_holder">There will be a text here</string>
    <string name="home">Superhéroes</string>
    <string name="hero_name">Name</string>
    <string name="creation_date">Creation date</string>
    <string name="title_details_frag">Detalles</string>
    <string name="date_holder">Fecha de creación</string>
    <string name="color_holder">Color</string>
    <string name="translation_holder">Traducción</string>
    <string name="details_holder">Más detalles ( origen y poderes)</string>
    <string name="fab_description">Botón con un icono de un sobre.</string>
    <string name="translation_true">Cuenta con traducción al español.</string>
    <string name="translation_false">Sin traducción.</string>
    <string name="description_title">Detalles: \n \n Origen: \n %1$s \n \n Poder: \n %2$s</string>
    <string name="translation_value">true</string>
    <string name="creation_date_dt">Fecha de creación: %1$d</string>
    <string name="color_dt">Color: %1$s</string>
    <string name="send_email_to">comicconchile@hotmail.com</string>
    <string name="email_subject">Votación por %1$s</string>
    <string name="email_text">"Hola \n Quiero que el siguiente super héroe %1$s aparezca en la nueva
        edición de biografías animadas. \n Número de contacto: _____ \n Gracias.</string>
</resources>